--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -697,6 +697,7 @@ section {
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
   text-align: left;
 }
