--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 /* index.css - ClubConnect Pastel Design System */
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap');
 * {
   margin: 0;
   padding: 0;
